Fix scrollbars on chrome
May not be a permanent fix, if it continues to b e an issue it is
likely an inconsistency in the way browsers calculate text height
making the calculated "safe" height incorrect.

--- a/styles/default.css
+++ b/styles/default.css
@@ -23,6 +23,8 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+
+  overflow: hidden;
 }
 
 /* INPUTS */
